# bitarray

./: CMakeLists.txt  README.md
cmake/: bitarray.cmake
examples/c/: CMakeLists.txt  main.c
examples/cpp/: CMakeLists.txt  main.cpp
src/: bitarray.cpp  bitarray.h  bitarray.hpp
